src/v1.2.4/guide/update.md
# **更新记录和未来计划** 
> [!IMPORTANT]
> 更新脚本在项目里面的sql文件下，对应数据库类型，对应版本号

## 未来发布计划

- vx.x.x
  - 动态表单支持
  - 设计器考虑bpmn
  - 挂起和恢复
  - 撤回
  - 适配国产数据库
  - 支持主键自增策略
  - 重启流程
  - 流程定义增加显示流程图


## 正开发中计划


## 已完成计划
- v1.2.4 2024-08-14
  - [feat] 激活和挂起 @xiaoxiaoliu889
  - [feat] 不同节点也支持配置审批表单路径 @vanlin
  - [feat] 支持接收外部流程状态，支持流程状态扩展 @vanlin
  - [feat] 新增spel条件表达式，新增可通过SPI机制加载条件表达式
  - [feat] 新增分派监听器，支持代办任务中办理人等动态修改 @liangli
  - [feat] 新增Easy-Query框架支持 @link2fun
  - [feat] 新增Mybatis-Flex的solon扩展包  @xiarigang
  - [feat] 新增Jpa的solon扩展包  @vanlin
  - [feat] 历史表新增跳转类型，记录跳转类型 @vanlin
  - [feat] 增加组件加载，yml控制开关 @疯狂的狮子Li
  - [update] 之前强依赖流程状态的通过的，改为跳转类型，历史数据考虑如何处理 @vanlin
  - [update] 之前所有保存流程状态地方，全部提供可接受外部传入 @vanlin
  - [update] 流程开启，校验节点是否发布，提示语增加流程编码
  - [update] 删除校验是否任意跳转
  - [update] 修改扩展字段ext注释，删除FlowConfigUtil多余的代码
  - [update] SqlSessionFactory改为构造函数引入
  - [update] 替换异常类，UtilException高版本不兼容
  - [update] from_custom改为form_custom，from_path改为form_path
  - [remove] 移除节点前置执行权限处理器
  - [remove] 删除cooperateAutoPass方法
  - [update] 代办改为待办
  - [refactor] 重构测试模块，完善mybatis-plus多租户和逻辑删除使用方式
  - [refactor] 重构solon和插件模块
  - [fix] 修复加签批量提交报错
  - [fix] 修复TaskServiceImpl#handleDepute方法中删除受托人传参数错误 
  - [fix] 修复 JPA flowUserDao bug @vanlin
  - [fix] 流程第三个节点为网关时无法渲染颜色
  - [fix] 修复查看流程图模糊的问题 @erfeijiadao
  - [fix] 修復开始节点直连网关，流程图渲染有问题
  - [fix] 修复不能退回，未完成过任务
  - [fix] 修复流程定义和流程实例相同，处于非结束节点，流程实例不能存在相同的业务id
  - [fix] 修复不能退回，未完成过任务
  - [fix] 删除不必要的··符号，修复postgresql与mysql关键词符号问题。
  - [fix] 修复流程已完成，流程图结束节点显示为黑色
  - [fix] 修复已办任务查询审批想起无效问题
  - [fix] 设置开始节点 skip_type = PASS
  - [fix] 为SpringUtil指定bean name,解决 LocalContainerEntityManagerFactoryBean 依赖问题
  - [chore] 升级dom4j为安全版本2.1.3

**【升级注意事项】**：
    1、执行升级脚本【warm-flow_1.2.4.sql】  
    2、流程定义表from_custom改为form_custom，from_path改为form_path，涉及到这两个字段的前后段都要修改  
    3、反显审批流程表单，改为通过task表新增的form_custom和form_path字段
    4、只针对mybatis-plus扩展包，其他的扩展包可忽略，多租户和逻辑删除，改为通过mybatis-plus的自带的方式实现(可参考官网文章逻辑删除和多租户)，并且流程表的逻辑删除字段都更新为0

- v1.2.3 2024-06-28
  - [fix] 修复更新拼上了多余的条件
  - [fix] 修复保存流程xml报错问题

- v1.2.1 2024-06-28 更新注意：执行升级脚本
  - [feat] 新增mybatis-flex扩展包  @xiarigang 
  - [feat] 新增抄送演示案例  @adru*
  - [feat] 历史记录表新增ext扩展字段，方便保存历史过程数据  @adru* 
  - [update] 保存下一个节点办理人时，不校验是否有审批人
  - [update] 调整扩展包配置，新增测试模块
  - [update] 票签,会签，将待办任务的创建时间赋予历史任务开始时间  @liutao
  - [update] 调整mybatis-plus多租户和软件删除处理
  - [update] 修改任务历史表时间定义，任务审批通过，将待办任务的创建时间赋予历史任务开始时间  @liutao*
  - [update] 修正pg的sql文件名，新增1.2.1增量sql  @liutao
  - [update] 会签票签，开始时间记录代表任务的创建时间
  - [remove] 删除监听器自定义参数,修改扩展字段名称
  - [fix] 监听器问题修复  @liangli
  - [fix] solon插件包增加userMapper.xml加载 
  - [fix] 修复填充器不接收外部设置的时间 
  - [fix] 修复userMapper.xml中updateLogic的某个负值错误 
  
- v1.2.0  2024-06-13 注意事项：工具包路径调整，新增升级脚本
  - 待办表解偶用户，新增用户表（查询方式需要改动）
  - 会签，票签
  - 加减签
  - 转办完善
  - jpa扩展
  - oracle适配
  - pg适配

- v1.1.91  2024-05-17
  - 修复设置默认填充器时候，判空错误


- v1.1.90  2024-05-08 【注意事项：执行1.1.90版本sql】
  - orm支持mybatis-plus扩展
  - 多租户字段隔离提供全局配置，自动获取
  - 增加软删除可以配置化
  - 新增三个测试模块

- v1.1.7 2024-04-27
  - 启动流程时，支持第二个节点为网关节点的情况
  - 开始监听器和结束监听器新增返回当前任务和新建任务集合
  - 修复终止流程bug

- v1.1.6 2024-04-23
  - 支持转办功能
  - 任务自动流转到创建人
  - 考虑流程终止功能
  - 修复流程流转异常

- v1.1.51 2024-04-19
  - 实体类支持序列化
  - 修复java17以上@Resource包路径变更的问题

- v1.1.5
  - 支持自定义填充
  - 新增配置文件，部分功能可配置
  - 重构代码，insService.skip标识即将删除，改用taskService.skip
  - 引入日志门面

- v1.1.42
  - 修复并行网关后面没有中间节点
  - 修复开始任务记录待办，为保存流程状态
  - 新增链式查询排序提供id排序
  - 新增历史任务记录结束节点
  - 新增赋值流程记录创建更新时间
  - 优化表实体类链式赋值
  - 待办已办查询标记为即将删除, 已挪到业务系统中

- v1.1.41
  - 修复已经设置后续节点动态权限后，办理时未生效问题；
  - 枚举扩展getByKey方法 @Holly_Git
  - 调整实例类结构，方便链式写法

- v1.1.4
  - 修复监听器部分判空bug  感谢@Holly_Git
  - 新增创建任务监听器
  - 修改flow_node监听类型和监听路径字段长度
  - 新增监听器生命周期概念，完善文档
  - 重构流程开启流程和流程办理代码
  - 开始节点也能记录到历史任务记录中

- v1.1.3
  - 新增权限监听器，办理中动态设置权限  感谢@Holly

- v1.1.2
  - 流程定义新增复制按钮
  - 补齐sql脚本，完善文档
  - 跳转条件获取方式变更为流程变量  感谢@Holly
  - 监听器变量新增返回结点信息    感谢@Holly
  - 新增根据流程定义和当前节点code获取下一节点api接口.   感谢@Holly
  - 删除多余的字段和代码

- v1.1.0
  - 可以跳转指定节点
  - 增加全局变量
  - 增加监听器
  - 重构代码，解偶orm，方便扩展不同orm和数据，新增代码示例
  - 修复并行网关流程流程图显示错误问题


- v1.0.0
  - 完善流程设计器和流程图，新增vue3版本
  - 放弃js引擎，自研条件表达式
  - 新增支持条件表达式
  - 可退回到任意节点
  - 支持生成流程图 
  - 流程设计器开发
  - 互斥网关，并行网关（会签、或签）功能开发
  - 抽离spring生态依赖，支持solon，并且保持事务与业务系统一致
  - 支持待办任务和已办任务，通过权限标识过滤数据
  - 新增多租户模式
  - 原生提供排序
  - 原生提供分页查询
  - 项目上传中央仓库
  - 工作流模块抽取为独立项目，提供集成方式 
  - 已办任务和任务记录，审批页面中包含业务详情页面 
  - 提供待办任务、提供角色、部门等权限配置
  - 提供流程配置界面
  - 流程配置文件改为表单填报方式
  - 用户角色抽取出来 
  - 整理流程表，调整表名和字段名
